--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html,body{
 #main{
     height: 100vh;
     width: 100vw;
-    background-image: url(./still-life-rendering-jackets-display.jpg);
+    background-image: url(./still-life-rendering-jackets-display.webp);
     background-size: cover;
 }
 #nav{
@@ -22,7 +22,6 @@ html,body{
     align-items: center;
     padding: 2rem 3rem;
     gap: 18rem;
-    /* background-color: red; */
 }
 #lnav .pro{
     color: white;
@@ -48,7 +47,6 @@ html,body{
     position: relative;
     width: 60%;
     left: 25%;
-    /* color: white; */
     
 }
 #mtop #up{
